// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 gFvKMM"
    id="Field"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field Name
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
      fontSize="1rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.5px"
    >
      Field Value
    </p>
  </section>
  <div />
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 kzIWqC"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 gFvKMM"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Default
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 dKtzMM"
      id="Edge-Aligned"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Edge-Aligned
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 bGeOAY"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 dEUBHW"
      id="Vertically-Aligned"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Vertically-Aligned
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 kzIWqC"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 gFvKMM"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 iylhzH"
      id="2x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label (2x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 gumtSQ"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label (3x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 bJDudO"
      id="4x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label (4x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 kzIWqC"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 jfgueP"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Small Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 gFvKMM"
      id="2x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Default Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 gsVEvE"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Large Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 cunOcU"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        XL Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 eDiOUT"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 eIDdGV"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        2XL Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 hCPlyV"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;
